<resources>
    <string name="app_name">Who Knows Who</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1722924587943577</string>
    <string name="search_for_your_opponent">Search for Your Opponent!</string>
    <string name="wager_sent">Wager Sent</string>
    <string name="begin_the_game">Begin the Game</string>
    <string name="back">Back</string>
    <string name="send_wager">Send Wager</string>
    <string name="make_a_wager">Make a Wager</string>
    <string name="what">What</string>
    <string name="note">Note</string>
    <string name="battle_this_opponent">Battle this Opponent</string>
    <string name="fullname">%1$s %2$s</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="now_answer_your_opponents_questions">Now answer\nyour opponent\'s\nquestions</string>
    <string name="youre_finished">You\'re finished.</string>
    <string name="you_fought_well">You fought well.</string>
    <string name="see_who_won">See Who Won</string>
    <string name="your_opponent_has_not_finished_answering_their_questions_yet">Your opponent has not finished answering their questions yet.</string>
    <string name="send_kick_in_the_face">Send Kick in the Face</string>
    <string name="your_opponent_who_is_likely_scared_of_you_has_been_kicked_in_the_face">Your opponent, who is likely scared of you, has been kicked in the face.</string>
    <string name="we_ll_notify_you_when_they_ve_completed_their_answers">We\'ll notify you when they\'ve completed their answers.</string>
    <string name="your_time_will_come">Your time will come.</string>
    <string name="play_again">Play Again</string>
    <string name="final_results">Final Results</string>
    <string name="no_wager">Set a wager, or skip it.</string>
    <string name="question_x">Question %1$d</string>
    <string name="answer_x">Answer %1$d</string>
    <string name="you_defeated_them">You defeated %1$s!</string>
    <string name="no_match">%1$s was no match for your power.</string>
    <string name="they_smoked_you">%1$s smoked you.</string>
    <string name="equilibrium">The equilibrium will not last.</string>
    <string name="youve_tied">You\'ve tied.</string>
    <string name="they_challenged_you">%1$s challenged you</string>
    <string name="they_challenged_you_to_a_wager">%1$s challenged you to a wager</string>
    <string name="they_finished">%1$s finished answering</string>
    <string name="now_answer_theirs_subtext">Now answer theirs</string>
    <string name="see_who_won_subtext">See who won</string>
    <string name="they_have_thrown_the_gauntlet_down">%1$s has thrown the gauntlet down</string>
    <string name="bam">Bam!</string>
    <string name="accept_challenge">Accept Challenge</string>
    <string name="waiting_on_opponent">Waiting on %1$s…</string>
    <string name="yourQuestions">Answer Your Questions</string>
    <string name="theirQuestions">Guess %1$s\'s Answers</string>
    <string name="no_games_played">No Games Played</string>
    <string name="waiting_on_you">Waiting on you…</string>
    <string name="waiting_on_them">Waiting on opponent…</string>
    <string name="last_game_won">Last Game Won</string>
    <string name="last_game_lost">Last Game Lost</string>
    <string name="last_game_tied">Last Game Tied</string>
    <string name="share_using">Share using…</string>
    <string name="invite_message">INSTALL THIS APP NOW!!</string>
    <string name="no_wager_was_set">No wager was set.</string>
    <string name="invite_your_partner_and_they_will_show_up_here">Invite your partner and they will show up here</string>
</resources>
