<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="2dp">

        <ImageButton
            android:id="@+id/backButton"
            android:background="?android:selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:tint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/almostBlack"
            android:textSize="18sp"
            android:text="@string/back"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/top"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_opponent_who_is_likely_scared_of_you_has_been_kicked_in_the_face"
            android:paddingLeft="72dp"
            android:paddingRight="72dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/almostBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingLeft="72dp"
            android:paddingRight="72dp"
            android:text="@string/we_ll_notify_you_when_they_ve_completed_their_answers"
            android:textSize="24sp"
            android:textColor="@color/almostBlack" />

    </LinearLayout>

</RelativeLayout>