<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="2dp">

        <ImageButton
            android:id="@+id/backButton"
            android:background="?android:selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:tint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/almostBlack"
            android:textSize="18sp"
            android:text="@string/back"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/top"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_send_white_48px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/wager_sent"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/almostBlack"
            android:gravity="center" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/beginGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/begin_the_game"
            android:padding="20dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</RelativeLayout>