<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="2dp">

        <ImageButton
            android:id="@+id/backButton"
            android:background="?android:selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:tint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/almostBlack"
            android:textSize="18sp"
            android:text="@string/make_a_wager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/top"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:textColor="@color/almostBlack"
                android:width="72dp"
                android:padding="12dp"
                android:gravity="right" />

            <EditText
                android:id="@+id/wagerWhat"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="18dp"
                android:inputType="textCapSentences"
                android:textColorHint="@color/lightGrayText"
                android:textColor="@color/almostBlack"
                android:textAlignment="gravity"
                android:gravity="top"
                android:hint="Ex. Loser buys cheetos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/almostBlack"
                android:width="72dp"
                android:padding="12dp"
                android:gravity="right" />

            <EditText
                android:id="@+id/wagerNote"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="18dp"
                android:inputType="textCapSentences|textMultiLine"
                android:textColorHint="@color/lightGrayText"
                android:textColor="@color/almostBlack"
                android:textAlignment="gravity"
                android:gravity="top"
                android:hint="Ex. I'm talking the big bag.  You know the one.  The real deal." />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/sendWagerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/red_button"
            android:text="@string/send_wager"
            android:padding="16dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>

        <Button style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/skipWagerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/grayText"
            android:text="SKIP WAGER"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>